dhall/tests/type-inference/failure/unit/MergeHandlerNotMatchAlternativeType.txt
Type error: error: Wrong handler input type
 --> <current file>:1:1
  |
1 | merge { x = λ(_ : Bool) → _ } (< x : Natural >.x 1)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ in this merge expression
  |       ^^^^^^^^^^^^^^^^^^^^^^^ the handler for `x` expects a value of type: `Bool`
  |                                ^^^^^^^^^^^^^^^^^^^ but the corresponding variant has type: `Natural`
  |
